--- a/phpdocker/nginx/nginx.conf
+++ b/phpdocker/nginx/nginx.conf
@@ -5,37 +5,21 @@ server {
 
     access_log /var/log/nginx/application.access.log;
 
-    root /application/web;
+    root /application/public;
     
-    rewrite ^/app\.php/?(.*)$ /$1 permanent;
-    
-    try_files $uri @rewriteapp;
-    
-    location @rewriteapp {
-        rewrite ^(.*)$ /app.php/$1 last;
-    }
-    
-    # Deny all . files
-    location ~ /\. {
-        deny all;
-    }
-    
-    location ~ ^/(app|app_dev)\.php(/|$) {
-        fastcgi_pass php-fpm:9000;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        fastcgi_index app.php;
-        send_timeout 1800;
-        fastcgi_read_timeout 1800;
-        fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PHP_VALUE "error_log=/var/log/nginx/application_php_errors.log";
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-        include fastcgi_params;
-    }
-    
-    # Statics
-        location /(bundles|media) {
-        access_log off;
-        expires 30d;
-        try_files $uri @rewriteapp;
-    }}
+ 	# Symfony config
+	location / {
+			# Try to serve file directly, fallback to index.php
+			try_files $uri /index.php$is_args$args;
+	}
+
+	location ~ ^/index\.php(/|$) {
+		fastcgi_pass php-fpm:9000;
+		fastcgi_split_path_info ^(.+\.php)(/.*)$;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
+		fastcgi_param DOCUMENT_ROOT $realpath_root;
+		internal;
+	}
+
+}
