--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -10,5 +10,5 @@ doctrine:
                 is_bundle: false
                 type: annotation
                 dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'App\Entity\'
+                prefix: 'Beeriously\Entity'
                 alias: App
