--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -4,11 +4,9 @@ doctrine:
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
         mappings:
-            App:
+            Beeriously:
                 is_bundle: false
                 type: annotation
-                dir: '%kernel.project_dir%/src/Entity'
-                prefix: 'Beeriously\Entity'
-                alias: App
+                dir: '%kernel.project_dir%/src/'
+                prefix: 'Beeriously'
