--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,16 +13,17 @@ services:
         # if you need to do this, you can override this setting on individual services
         public: false
 
+    Doctrine\ORM\EntityManagerInterface:
+        alias: 'doctrine.orm.entity_manager'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    Beeriously\:
-        resource: '../src/*'
-        # you can exclude directories or files
-        # but if a service is unused, it's removed anyway
-        exclude: '../src/{Entity,Migrations,Repository,Tests,Domain}'
+    Beeriously\Application\Repository\:
+        resource: '../src/Application/Repository'
 
     # controllers are imported separately to make sure they
     # have the tag that allows actions to type-hint services
     Beeriously\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+
