--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "symfony/security-bundle": "^3.3",
         "symfony/twig-bundle": "^3.3",
         "symfony/web-profiler-bundle": "^3.3",
+        "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
