--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       working_dir: /application
       volumes:
           - .:/application
-          - ./phpdocker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+          - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
       ports:
        - "62337:80"
       links:
@@ -35,12 +35,21 @@ services:
     php-fpm:
       build:
         context: .
-        dockerfile: phpdocker/php-fpm/Dockerfile
+        dockerfile: docker/php-fpm/Dockerfile
       container_name: beeriously-php-fpm
       working_dir: /application
       volumes:
         - .:/application
-        - ./phpdocker/php-fpm/php-ini-overrides.ini:/etc/php/7.1/fpm/conf.d/99-overrides.ini
+        - ./docker/php-fpm/php-ini-overrides.ini:/etc/php/7.1/fpm/conf.d/99-overrides.ini
       links:
         - mariadb
         - redis
+
+    webpack:
+      build:
+        context: .
+        dockerfile: docker/node/Dockerfile
+      container_name: beeriously-webpack
+      working_dir: /application
+      volumes:
+        - .:/application
