--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "devDependencies": {
     "@symfony/webpack-encore": "^0.17.0",
-    "bootstrap-sass": "^3.3.7",
+    "bootstrap": "4.0.0-beta.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6"
-  }
+    "popper.js": "^1.12.9",
+    "sass-loader": "^6.0.6",
+    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
+  },
+  "dependencies": {}
 }
