--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "ramsey/uuid": "^3.7",
         "sensio/framework-extra-bundle": "^5.0",
+        "symfony/asset": "^3.3",
         "symfony/console": "^3.3",
         "symfony/framework-bundle": "^3.3",
         "symfony/monolog-bundle": "^3.1",
@@ -17,9 +18,10 @@
         "symfony/yaml": "^3.3"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.8",
         "phpunit/phpunit": "^6.4",
-        "symfony/flex": "^1.0",
-        "symfony/dotenv": "^3.3"
+        "symfony/dotenv": "^3.3",
+        "symfony/flex": "^1.0"
     },
     "config": {
         "preferred-install": {
