--- a/composer.json
+++ b/composer.json
@@ -1,65 +1,67 @@
 {
-    "type": "project",
-    "license": "proprietary",
-    "require": {
-        "php": "^7.1.0",
-        "doctrine/doctrine-migrations-bundle": "^1.2",
-        "ramsey/uuid": "^3.7",
-        "sensio/framework-extra-bundle": "^5.0",
-        "symfony/asset": "^3.3",
-        "symfony/console": "^3.3",
-        "symfony/framework-bundle": "^3.3",
-        "symfony/monolog-bundle": "^3.1",
-        "symfony/orm-pack": "^1.0",
-        "symfony/security-bundle": "^3.3",
-        "symfony/twig-bundle": "^3.3",
-        "symfony/web-profiler-bundle": "^3.3",
-        "symfony/webpack-encore-pack": "^1.0",
-        "symfony/yaml": "^3.3"
+  "name": "cassell/beeriously",
+  "description": "Beeriously Brewing Software",
+  "type": "project",
+  "license": "proprietary",
+  "require": {
+    "php": "^7.1.0",
+    "doctrine/doctrine-migrations-bundle": "^1.2",
+    "ramsey/uuid": "^3.7",
+    "sensio/framework-extra-bundle": "^5.0",
+    "symfony/asset": "^3.3",
+    "symfony/console": "^3.3",
+    "symfony/framework-bundle": "^3.3",
+    "symfony/monolog-bundle": "^3.1",
+    "symfony/orm-pack": "^1.0",
+    "symfony/security-bundle": "^3.3",
+    "symfony/twig-bundle": "^3.3",
+    "symfony/web-profiler-bundle": "^3.3",
+    "symfony/webpack-encore-pack": "^1.0",
+    "symfony/yaml": "^3.3"
+  },
+  "require-dev": {
+    "friendsofphp/php-cs-fixer": "^2.8",
+    "phpunit/phpunit": "^6.4",
+    "symfony/dotenv": "^3.3",
+    "symfony/flex": "^1.0"
+  },
+  "config": {
+    "preferred-install": {
+      "*": "dist"
     },
-    "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.8",
-        "phpunit/phpunit": "^6.4",
-        "symfony/dotenv": "^3.3",
-        "symfony/flex": "^1.0"
-    },
-    "config": {
-        "preferred-install": {
-            "*": "dist"
-        },
-        "sort-packages": true
-    },
-    "autoload": {
-        "psr-4": {
-            "Beeriously\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "App\\Tests\\": "tests/"
-        }
-    },
-    "scripts": {
-        "auto-scripts": {
-            "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
-        },
-        "post-install-cmd": [
-            "@auto-scripts"
-        ],
-        "post-update-cmd": [
-            "@auto-scripts"
-        ]
-    },
-    "conflict": {
-        "symfony/symfony": "*",
-        "symfony/twig-bundle": "<3.3",
-        "symfony/debug": "<3.3"
-    },
-    "extra": {
-        "symfony": {
-            "id": "01BXMSAGR73ZWPVXB4TKTVY486",
-            "allow-contrib": false
-        }
+    "sort-packages": true
+  },
+  "autoload": {
+    "psr-4": {
+      "Beeriously\\": "src/"
     }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "App\\Tests\\": "tests/"
+    }
+  },
+  "scripts": {
+    "auto-scripts": {
+      "cache:clear": "symfony-cmd",
+      "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+    },
+    "post-install-cmd": [
+      "@auto-scripts"
+    ],
+    "post-update-cmd": [
+      "@auto-scripts"
+    ]
+  },
+  "conflict": {
+    "symfony/symfony": "*",
+    "symfony/twig-bundle": "<3.3",
+    "symfony/debug": "<3.3"
+  },
+  "extra": {
+    "symfony": {
+      "id": "01BXMSAGR73ZWPVXB4TKTVY486",
+      "allow-contrib": false
+    }
+  }
 }
