Symfony Brewer Session, Login, Logout. closes #6

--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 DATABASE_URL="mysql://root:64ounces@mariadb:3306/beeriously?charset=utf8mb4&serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=null://localhost
+###< symfony/swiftmailer-bundle ###
