--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,20 @@
   "require": {
     "php": "^7.1.0",
     "doctrine/doctrine-migrations-bundle": "^1.2",
+    "friendsofsymfony/user-bundle": "dev-patch-1",
     "ramsey/uuid": "^3.7",
     "sensio/framework-extra-bundle": "^5.0",
     "symfony/asset": "^3.3",
     "symfony/console": "^3.3",
+    "symfony/form": "^3.3",
     "symfony/framework-bundle": "^3.3",
     "symfony/monolog-bundle": "^3.1",
     "symfony/orm-pack": "^1.0",
     "symfony/security-bundle": "^3.3",
+    "symfony/swiftmailer-bundle": "^3.1",
+    "symfony/translation": "^3.3",
     "symfony/twig-bundle": "^3.3",
+    "symfony/validator": "^3.3",
     "symfony/web-profiler-bundle": "^3.3",
     "symfony/webpack-encore-pack": "^1.0",
     "symfony/yaml": "^3.3"
@@ -63,5 +68,11 @@
       "id": "01BXMSAGR73ZWPVXB4TKTVY486",
       "allow-contrib": false
     }
-  }
+  },
+  "repositories": [
+    {
+      "type": "git",
+      "url": "git@github.com:weaverryan/FOSUserBundle.git"
+    }
+  ]
 }
