--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,14 +1,16 @@
 framework:
     secret: '%env(APP_SECRET)%'
     #default_locale: en
-    #csrf_protection: ~
+    csrf_protection: true
     #http_method_override: true
     #trusted_hosts: ~
     # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
-    #session:
-    #    # The native PHP session handler will be used
-    #    handler_id: ~
+    session:
+        # The native PHP session handler will be used
+        handler_id: ~
     #esi: ~
     #fragments: ~
     php_errors:
         log: true
+    templating:
+        engines: ['twig']
