--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,6 +1,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    locale: 'en'
 
 services:
     # default configuration for services in *this* file
@@ -18,12 +19,11 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    Beeriously\Application\Repository\:
-        resource: '../src/Application/Repository'
+#    Beeriously\Application\Repository\:
+#        resource: '../src/Application/Repository'
 
     # controllers are imported separately to make sure they
     # have the tag that allows actions to type-hint services
     Beeriously\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
-
