Initial menu layout

--- a/config/packages/dev/swiftmailer.yaml
+++ b/config/packages/dev/swiftmailer.yaml
@@ -3,3 +3,4 @@ swiftmailer:
     #  send all emails to a specific address
     #delivery_addresses: ['me@example.com']
     disable_delivery: true
+    logging: true
