--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "php": "^7.1.0",
     "doctrine/doctrine-migrations-bundle": "^1.2",
     "friendsofsymfony/user-bundle": "dev-patch-1",
+    "jolicode/gif-exception-bundle": "^1.4",
     "ramsey/uuid": "^3.7",
     "sensio/framework-extra-bundle": "^5.0",
     "symfony/asset": "^3.3",
