--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "bootstrap": "4.0.0-beta.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "jquery-ui": "^1.12.1",
     "node-sass": "^4.7.2",
     "popper.js": "^1.12.9",
     "sass-loader": "^6.0.6",
