--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -14,3 +14,5 @@ framework:
         log: true
     templating:
         engines: ['twig']
+    assets:
+        json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
