--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,9 +1,11 @@
 
 security:
+    always_authenticate_before_granting: true
     encoders:
         Beeriously\Domain\Brewers\Brewer: bcrypt
 
     role_hierarchy:
+        ROLE_VALID_BREWER: ROLE_USER
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
@@ -30,4 +32,4 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, role: ROLE_USER }
+        - { path: ^/, role: ROLE_VALID_BREWER }
