--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,8 @@
     "php": "^7.1.0",
     "doctrine/doctrine-migrations-bundle": "^1.2",
     "friendsofsymfony/user-bundle": "^2.0",
+    "jms/i18n-routing-bundle": "^2.0",
+    "jms/translation-bundle": "^1.3",
     "jolicode/gif-exception-bundle": "^1.4",
     "ramsey/uuid": "^3.7",
     "sensio/framework-extra-bundle": "^5.0",
