--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -35,7 +35,8 @@ security:
             anonymous:    true
 
     access_control:
-        - { path: ^/(en|de)/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/(en|de)/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/(en|de)/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/(en|de)/, role: ROLE_VALID_BREWER }
+        - { path: ^/([a-z]+)/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/([a-z]+)/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/([a-z]+)/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/([a-z]+)/choose-language, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/([a-z]+)/, role: ROLE_VALID_BREWER }
