--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,12 +1,13 @@
 framework:
     secret: '%env(APP_SECRET)%'
     csrf_protection: true
-    #http_method_override: true
-    #trusted_hosts: ~
-    # https://symfony.com/doc/current/reference/configuration/framework.html#handler-id
     session:
-        # The native PHP session handler will be used
-        handler_id: ~
+        handler_id:  Beeriously\Application\SessionHandler\SessionHandler
+        name: brew_session
+        cookie_httponly: true
+        cookie_secure: false
+        cookie_lifetime: 14400
+        gc_maxlifetime: 14400
     #esi: ~
     #fragments: ~
     php_errors:
@@ -15,3 +16,4 @@ framework:
         engines: ['twig']
     assets:
         json_manifest_path: '%kernel.project_dir%/public/build/manifest.json'
+
