Revert "Session handler does not have to be public"
This reverts commit 13b14d09bb203b0ba52e4fc83e4bbf8aac7c1ef4.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,5 +31,6 @@ services:
     Beeriously\Application\SessionHandler\PdoConnectionDsnProviderInterface:
         class: Beeriously\Application\SessionHandler\DoctrineConnectionToPdoDsnAdapter
 
-    Beeriously\Application\SessionHandler\SessionHandler: ~
+    Beeriously\Application\SessionHandler\SessionHandler:
+        public: true
 
