--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "cassell/beeriously",
   "description": "Beeriously Brewing Software",
   "type": "project",
-  "license": "proprietary",
+  "license": "AGPL-3.0-only",
   "require": {
     "php": "^7.1.0",
     "doctrine/doctrine-migrations-bundle": "^1.2",
