--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -4,5 +4,5 @@ fos_user:
   firewall_name: main
   user_class: \Beeriously\Domain\Brewers\Brewer
   from_email:
-      address: "mailer_user"
-      sender_name: "mailer_user"
+    address: "%mailer_user%"
+    sender_name: "%mailer_user%"
