Deprecate VALID_BREWER role

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,7 +5,6 @@ security:
         Beeriously\Application\Brewers\Brewer: bcrypt
 
     role_hierarchy:
-        ROLE_VALID_BREWER: ROLE_USER
         ROLE_ADMIN:       ROLE_USER
         ROLE_SUPER_ADMIN: ROLE_ADMIN
 
@@ -40,4 +39,4 @@ security:
         - { path: '^/([a-z]+)/resetting', role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/([a-z]+)/choose-language', role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: '^/([a-z]+)/admin/_trans', role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: '^/([a-z]+)/', role: ROLE_VALID_BREWER }
+        - { path: '^/([a-z]+)/', role: ROLE_USER }
