--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -6,3 +6,6 @@ fos_user:
   from_email:
     address: "%mailer_user%"
     sender_name: "%mailer_user%"
+  registration:
+    form:
+      type: Beeriously\Application\Registration\RegistrationForm
