Installed behat packages

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,7 @@
 ###> friendsofphp/php-cs-fixer ###
 .php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
+
+###> behat/symfony2-extension ###
+behat.yml
+###< behat/symfony2-extension ###
