--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,9 @@
   "license": "AGPL-3.0-only",
   "require": {
     "php": "^7.1.0",
+    "behat/mink-extension": "^2.3",
+    "behat/mink-goutte-driver": "^1.2",
+    "behat/mink-selenium2-driver": "^1.3",
     "friendsofsymfony/user-bundle": "^2.0",
     "jms/i18n-routing-bundle": "^3.0",
     "jolicode/gif-exception-bundle": "^1.4",
@@ -27,6 +30,7 @@
     "symfony/yaml": "^4.0"
   },
   "require-dev": {
+    "behat/symfony2-extension": "^2.1",
     "friendsofphp/php-cs-fixer": "^2.8",
     "phpunit/phpunit": "^6.4",
     "symfony/dotenv": "^4.0",
