--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
         - .:/application
 
     selenium:
-      image: selenium/standalone-chrome-debug
+      image: selenium/standalone-chrome-debug:3.7.1
       working_dir: /application
       volumes:
         - .:/application:cached
