--- a/tests/Unit/phpunit.xml.dist
+++ b/tests/Unit/phpunit.xml.dist
@@ -22,14 +22,11 @@
 
     <filter>
         <blacklist>
-            <directory>./../../../vendor</directory>
-            <directory>./../../../tests</directory>
+            <directory>./../../vendor</directory>
+            <directory>./../../tests</directory>
         </blacklist>
         <whitelist>
-            <directory>./../../../src</directory>
-            <exclude>
-                <directory>./../../../src/Tests</directory>
-            </exclude>
+            <directory>./../../src</directory>
         </whitelist>
     </filter>
 </phpunit>
