--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
-DATABASE_URL="mysql://root:64ounces@mariadb:3306/beeriously?charset=utf8mb4&serverVersion=5.7"
+DATABASE_URL="postgres://postgres:64ounces@postgres:5432/beeriously"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
