--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "App\\Tests\\": "tests/"
+      "Beeriously\\Tests\\": "tests/"
     }
   },
   "scripts": {
