Update travis to point to new unit test location

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,5 +26,5 @@ script:
   - ./bin/console lint:yaml config
   - ./bin/console lint:twig templates
   - composer validate --strict
-  - ./vendor/bin/phpunit --configuration ./src/Tests/Unit/phpunit.xml.dist
+  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
 
