--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - composer self-update
 
 install:
-  - composer install
+  - composer install  --no-interaction --prefer-dist
 
 script:
   - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
