--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,13 @@ php:
   - 7.1
 sudo: false
 
+services:
+  - postgresql
+
 cache:
   yarn: true
   directories:
-    - $HOME/.composer/cache/files
+    - $HOME/.composer/cache
 
 env:
   global:
