--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,13 @@ before_install:
 install:
   - composer install  --no-interaction --prefer-dist
 
+before_script:
+- bin/console doctrine:database:drop --force --env=test
+- bin/console doctrine:database:create --env=test
+- bin/console doctrine:migrations:migrate  --env=test --no-interaction
+- bin/console cache:clear --env=test --no-interaction
+- bin/console cache:warmup --env=test --no-interaction
+
 script:
   - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
   - ./bin/console lint:yaml config
