--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,10 @@ install:
   - composer install  --no-interaction --prefer-dist
 
 before_script:
-- bin/console doctrine:database:drop --force --env=test
-- bin/console doctrine:database:create --env=test
-- bin/console doctrine:migrations:migrate  --env=test --no-interaction
-- bin/console cache:clear --env=test --no-interaction
-- bin/console cache:warmup --env=test --no-interaction
+  - psql -c 'create database beeriously;' -U postgres
+  - bin/console doctrine:migrations:migrate  --env=test --no-interaction
+  - bin/console cache:clear --env=test --no-interaction
+  - bin/console cache:warmup --env=test --no-interaction
 
 script:
   - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
