--- a/.env.travis
+++ b/.env.travis
@@ -12,7 +12,7 @@ APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
-DATABASE_URL="postgres://postgres@127.0.0.1:5432/beeriously"
+DATABASE_URL="postgres://beerme:64ounces@127.0.0.1:5433/beeriously?charset=UTF8&serverVersion=10"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
