--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,25 @@ sudo: false
 services:
   - postgresql
 
+addons:
+  postgresql: "10"
+  apt:
+    packages:
+    - postgresql-10
+    - postgresql-client-10
+
+env:
+  global:
+    - PGPORT=5433
+    - APP_ENV=test
+    - APP_DEBUG=1
+    - APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
+
 cache:
   yarn: true
   directories:
     - $HOME/.composer/cache
 
-env:
-  global:
-    - APP_ENV="test"
-    - APP_DEBUG=1
-    - APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
 
 before_install:
   - rm .env
@@ -28,6 +37,7 @@ install:
 
 before_script:
   - psql -c 'create database beeriously;' -U postgres
+  - psql -c "CREATE USER beerme WITH PASSWORD '64ounces';" -U postgres
   - bin/console doctrine:migrations:migrate  --env=test --no-interaction
   - bin/console cache:clear --env=test --no-interaction
   - bin/console cache:warmup --env=test --no-interaction
