--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,8 @@ install:
   - composer install  --no-interaction --prefer-dist
 
 before_script:
-  - psql -c 'create database beeriously;' -U postgres -h localhost
+  - export PGPASSWORD=""
+  - psql -c 'CREATE DATABASE beeriously;' -U postgres -h localhost
   - psql -c "CREATE USER beerme WITH PASSWORD '64ounces';" -U postgres -h localhost
   - bin/console doctrine:migrations:migrate  --env=test --no-interaction
   - bin/console cache:clear --env=test --no-interaction
