--- a/.travis.yml
+++ b/.travis.yml
@@ -37,8 +37,8 @@ install:
 
 before_script:
   - export PGPASSWORD=""
-  - psql -c 'CREATE DATABASE beeriously;' -U postgres -h localhost
-  - psql -c "CREATE USER beerme WITH PASSWORD '64ounces';" -U postgres -h localhost
+  - psql -c 'CREATE DATABASE beeriously;' -U postgres -h localhost --no-password
+  - psql -c "CREATE USER beerme WITH PASSWORD '64ounces';" -U postgres -h localhost --no-password
   - bin/console doctrine:migrations:migrate  --env=test --no-interaction
   - bin/console cache:clear --env=test --no-interaction
   - bin/console cache:warmup --env=test --no-interaction
