--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ install:
   - composer install  --no-interaction --prefer-dist
 
 before_script:
-  - psql -c 'CREATE DATABASE beeriously;' -U postgres -h localhost --no-password
-  - psql -c "CREATE USER beerme WITH PASSWORD '64ounces';" -U postgres -h localhost --no-password
+  - psql -c "create database gcr_test;" -U postgres
+  - psql -c "CREATE USER beerme WITH PASSWORD '64ounces';" -U postgres
   - bin/console doctrine:migrations:migrate  --env=test --no-interaction
   - bin/console cache:clear --env=test --no-interaction
   - bin/console cache:warmup --env=test --no-interaction
