--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,12 @@ sudo: false
 services:
   - postgresql
 
-addons:
-  postgresql: "10"
-  apt:
-    packages:
-    - postgresql-10
-    - postgresql-client-10
+#addons:
+#  postgresql: "10"
+#  apt:
+#    packages:
+#    - postgresql-10
+#    - postgresql-client-10
 
 env:
   global:
@@ -36,7 +36,7 @@ install:
   - composer install  --no-interaction --prefer-dist
 
 before_script:
-  - psql -c "create database gcr_test;" -U postgres
+  - psql -c "create database beeriously;" -U postgres
   - psql -c "CREATE USER beerme WITH PASSWORD '64ounces';" -U postgres
   - bin/console doctrine:migrations:migrate  --env=test --no-interaction
   - bin/console cache:clear --env=test --no-interaction
