--- a/.travis.yml
+++ b/.travis.yml
@@ -6,18 +6,13 @@ sudo: false
 services:
   - postgresql
 
-#addons:
-#  postgresql: "10"
-#  apt:
-#    packages:
-#    - postgresql-10
-#    - postgresql-client-10
-
 env:
   global:
     - APP_ENV=test
     - APP_DEBUG=1
     - APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
+    - DATABASE_URL=postgres://postgres@localhost:5432/beeriously?charset=UTF8&serverVersion=9.1
+    - MAILER_URL=null://localhost
 
 cache:
   yarn: true
@@ -31,7 +26,7 @@ before_install:
   - composer self-update
 
 install:
-  - composer install  --no-interaction --prefer-dist
+  - composer install --no-interaction --prefer-dist
 
 before_script:
   - psql -c "create database beeriously;" -U postgres
