--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ install:
 
 before_script:
   - psql -c "create database beeriously;" -U postgres
-  - bin/console doctrine:migrations:migrate  --env=test --no-interaction
-  - bin/console cache:clear --env=test --no-interaction
-  - bin/console cache:warmup --env=test --no-interaction
+  - bin/console doctrine:migrations:migrate --no-interaction
+  - bin/console cache:clear --no-interaction
+  - bin/console cache:warmup --no-interaction
 
 script:
   - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
