--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+.idea
+.env
 
 ###> symfony/framework-bundle ###
 /public/bundles/
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
-.idea
 
 ###> symfony/webpack-encore-pack ###
 /node_modules/
@@ -13,6 +14,7 @@
 ###> build directory from webpack ###
 /public/build/
 ###< build directory from webpack ###
+
 ###> friendsofphp/php-cs-fixer ###
 .php_cs.cache
 ###< friendsofphp/php-cs-fixer ###
@@ -20,3 +22,4 @@
 ###> behat/symfony2-extension ###
 behat.yml
 ###< behat/symfony2-extension ###
+
