--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "behat/mink-extension": "^2.3",
     "behat/mink-goutte-driver": "^1.2",
     "behat/mink-selenium2-driver": "^1.3",
+    "doctrine/doctrine-fixtures-bundle": "^3.0",
     "friendsofsymfony/user-bundle": "^2.0",
     "jms/i18n-routing-bundle": "^3.0",
     "jolicode/gif-exception-bundle": "^1.4",
