--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,7 +18,7 @@ services:
         autoconfigure: true
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
-        public: false
+        public: true
 
     Doctrine\ORM\EntityManagerInterface:
         alias: 'doctrine.orm.entity_manager'
