--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,7 +18,7 @@ services:
         autoconfigure: true
         # this means you cannot fetch services directly from the container via $container->get()
         # if you need to do this, you can override this setting on individual services
-        public: false
+        public: true
 
     Doctrine\ORM\EntityManagerInterface:
         alias: 'doctrine.orm.entity_manager'
@@ -42,4 +42,13 @@ services:
 
     Beeriously\Domain\Brewers\Preference\:
         resource: '../src/Domain/Brewers/Preference'
+
+    Beeriously\Tests\DataFixtures\:
+        resource: '../tests/DataFixtures'
+        public: true
+
+    Beeriously\Application\Organization\Listeners\:
+        resource: '../src/Application/Organization/Listeners'
+
+
 
