--- a/.travis.yml
+++ b/.travis.yml
@@ -3,28 +3,40 @@ php:
   - 7.1
 sudo: false
 
-cache:
-  yarn: true
-  directories:
-    - $HOME/.composer/cache/files
+services:
+  - postgresql
 
 env:
   global:
-    - APP_ENV="test"
+    - APP_ENV=test
     - APP_DEBUG=1
     - APP_SECRET=86b69684f6fe8114f978e4f02b067ab6
+    - DATABASE_URL=postgres://postgres@localhost:5432/beeriously
+    - MAILER_URL=null://localhost
+
+cache:
+  yarn: true
+  directories:
+    - $HOME/.composer/cache
+
 
 before_install:
-  - rm .env
+  - rm .env.dist
   - composer self-update
 
 install:
-  - composer install
+  - composer install --no-interaction --prefer-dist
+
+before_script:
+  - bin/console doctrine:database:create
+  - bin/console doctrine:migrations:migrate --no-interaction
+  - bin/console cache:clear --no-interaction
+  - bin/console cache:warmup --no-interaction
 
 script:
   - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
   - ./bin/console lint:yaml config
   - ./bin/console lint:twig templates
   - composer validate --strict
-  - ./vendor/bin/phpunit --configuration ./src/Tests/Unit/phpunit.xml.dist
+  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
 
