--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "behat/mink-extension": "^2.3",
     "behat/mink-goutte-driver": "^1.2",
     "behat/mink-selenium2-driver": "^1.3",
+    "doctrine/doctrine-fixtures-bundle": "^3.0",
     "friendsofsymfony/user-bundle": "^2.0",
     "jms/i18n-routing-bundle": "^3.0",
     "jolicode/gif-exception-bundle": "^1.4",
@@ -32,6 +33,7 @@
   "require-dev": {
     "behat/symfony2-extension": "^2.1",
     "friendsofphp/php-cs-fixer": "^2.8",
+    "phpstan/phpstan": "^0.9.2",
     "phpunit/phpunit": "^6.4",
     "symfony/dotenv": "^4.0",
     "symfony/flex": "^1.0"
@@ -49,7 +51,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "App\\Tests\\": "tests/"
+      "Beeriously\\Tests\\": "tests/"
     }
   },
   "scripts": {
