--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,3 @@
-###############################################################################
-#                          Generated on phpdocker.io                          #
-###############################################################################
 version: "3.1"
 services:
 
@@ -19,6 +16,14 @@ services:
         retries: 5
       ports:
         - "62338:3306"
+
+    postgres:
+      image: postgres
+      restart: always
+      environment:
+        POSTGRES_PASSWORD: 64ounces
+      ports:
+        - "127.0.0.1:62342:5432"
 
     webserver:
       image: nginx:alpine
@@ -52,5 +57,8 @@ services:
       volumes:
         - .:/application:cached
       ports:
-        - "4444:4444"
         - "62339:5900"
+
+    sauce-tunnel:
+      image: henrrich/docker-sauce-connect
+      command: ["-u", "user", "-k", "uuid-key"]
