added phpstan to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,5 @@ script:
   - composer validate --strict
   - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
   - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
+  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
 
