--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -7,7 +7,6 @@ default:
           verify: false
       browser_name: 'chrome'
       selenium2:
-        capabilities: { "browserName": "chrome", "browser": "chrome", 'chrome': {'switches':['--no-sandbox']}}
         wd_host: "http://selenium:4444/wd/hub"
   suites:
     default:
@@ -17,3 +16,16 @@ default:
         - Beeriously\Tests\Acceptance\FeatureContext:
         - Beeriously\Tests\Acceptance\Register\RegisterFeatureContext
 
+chrome:
+  extensions:
+    Behat\MinkExtension:
+      browser_name: chrome
+      selenium2:
+        capabilities: { "browserName": "chrome", "browser": "chrome", 'chrome': {'switches':['--no-sandbox']}}
+
+firefox:
+  extensions:
+    Behat\MinkExtension:
+      browser_name: firefox
+      selenium2:
+        capabilities: { "platform": "MAC", "browser": "firefox", "version": "" }
