--- a/behat.travis.yml
+++ b/behat.travis.yml
@@ -1,9 +1,10 @@
 imports:
-  - behat.yml.dist
+  - behat.dist.yml
 
 default:
   extensions:
     Behat\MinkExtension:
       base_url: http://localhost
-      default_session: saucelabs
-      javascript_session: saucelabs
+      sessions:
+        my_session:
+          sauce_labs: ~
