--- a/behat.docker-selenium.yml
+++ b/behat.docker-selenium.yml
@@ -3,6 +3,7 @@ imports:
 default:
   extensions:
     Behat\MinkExtension:
+      base_url: http://webserver
       selenium2:
         capabilities: { "browserName": "chrome", "browser": "chrome", 'chrome': {'switches':['--no-sandbox']}}
         wd_host: "http://selenium:4444/wd/hub"
