--- a/behat.travis-saucelabs.yml
+++ b/behat.travis-saucelabs.yml
@@ -1,10 +1,7 @@
 imports:
   - behat.dist.yml
-
+  - behat.saucelabs-profiles.yml
 default:
   extensions:
     Behat\MinkExtension:
       base_url: http://localhost
-      javascript_session: saucelabs
-      saucelabs:
-        browser: chrome
