--- a/.travis.yml
+++ b/.travis.yml
@@ -47,5 +47,6 @@ script:
   - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
   - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
   - ./vendor/bin/phpstan analyse --level=max ./src ./tests
+  - php -S localhost:80 -t public/ &
   - ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
 
