--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_script:
   - bin/console cache:warmup --no-interaction
 
 script:
+  - ./bin/console server:start
 #  - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
 #  - ./bin/console lint:yaml config
 #  - ./bin/console lint:twig templates
@@ -48,7 +49,7 @@ script:
 #  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
 #  - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
 #  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
-  - php -S localhost:8080 -t public/ public/index.php
+#  - php -S localhost:8080 -t public/ public/index.php
 #  - curl http://localhost:8080/
 
 #      curl http://127.0.0.1:8080/
