--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "phpstan/phpstan": "^0.9.2",
     "phpunit/phpunit": "^6.4",
     "symfony/dotenv": "^4.0",
-    "symfony/flex": "^1.0"
+    "symfony/flex": "^1.0",
+    "symfony/web-server-bundle": "^4.0"
   },
   "config": {
     "preferred-install": {
