--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,8 @@ before_script:
 
 script:
   - ./bin/console server:start
-  - ./bin/console server:status
+  - curl http://127.0.0.1:8000/
+  - ./bin/console server:stop
 #  - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
 #  - ./bin/console lint:yaml config
 #  - ./bin/console lint:twig templates
@@ -50,9 +51,7 @@ script:
 #  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
 #  - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
 #  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
-#  - php -S localhost:8000 -t public/ public/index.php
-#  - curl http://localhost:8000/
 
-#      curl http://127.0.0.1:8000/
+
 #      ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
 
