--- a/behat.travis-saucelabs.yml
+++ b/behat.travis-saucelabs.yml
@@ -4,4 +4,4 @@ imports:
 default:
   extensions:
     Behat\MinkExtension:
-      base_url: http://localhost:8080
+      base_url: http://127.0.0.1:8000
