--- a/.travis.yml
+++ b/.travis.yml
@@ -36,22 +36,22 @@ install:
   - yarn install
 
 before_script:
-  - export BEHAT_PARAMS="\{ default: \{ extensions: \{ Behat\MinkExtension: \{ selenium2: \{ \{ wd_host: \"https://${SAUCE_USERNAME}:${SAUCE_ACCESS_KEY}@ondemand.saucelabs.com:443/wd/hub\" \} \} \} \} \} \}"
   - bin/console cache:clear --no-interaction
   - bin/console cache:warmup --no-interaction
   - yarn run encore dev
+  - bin/console beeriously:travis:configure-behat > behat.travis-saucelabs.yml
   - bin/console doctrine:database:create
   - bin/console doctrine:migrations:migrate --no-interaction
 
 script:
   - composer validate --strict
-  - ./bin/console lint:yaml config
-  - ./bin/console lint:twig templates
-  - ./vendor/bin/php-cs-fixer fix --diff --dry-run -v
-  - ./vendor/bin/phpstan analyse --level=max ./src ./tests
-  - ./vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
-  - ./vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
-  - ./bin/console server:start
-  - ./vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
+  - bin/console lint:yaml config
+  - bin/console lint:twig templates
+  - vendor/bin/php-cs-fixer fix --diff --dry-run -v
+  - vendor/bin/phpstan analyse --level=max ./src ./tests
+  - vendor/bin/phpunit --configuration ./tests/Unit/phpunit.xml.dist
+  - vendor/bin/phpunit --configuration ./tests/Integration/phpunit.xml.dist
+  - bin/console server:start
+  - vendor/bin/behat -c ./behat.travis-saucelabs.yml -p win-chrome
   #  - curl http://127.0.0.1:8000/en/login
 #  - ./bin/console server:stop
